syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message AllianceMembersRequestDto {
  int32 id = 1;
}
