syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message SearchAllianceRequestDto {
  string search_string = 3;
}
